--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,12 +27,12 @@ jobs:
     steps:
      - uses: actions/checkout@v4
        name: Set up JDK 17
-       uses: actions/setup-java@v4
+     - uses: actions/setup-java@v4
        with:        
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-       name: Docker Image
-       run: docker build -t ttrimage:v1 .
+     -  name: Docker Image
+        run: docker build -t ttrimage:v1 .
 
    
