--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
 
   Image:
     runs-on: ubuntu-latest
+    needs: build
     steps:
      - uses: actions/checkout@v4
        name: Set up JDK 17
