--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
     needs: build
     steps:
      - uses: actions/checkout@v4
-       name: Set up JDK 17
+     - name: Set up JDK 17
      - uses: actions/setup-java@v4
        with:        
           java-version: '17'
