--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,39 +1,43 @@
-name: Build Pipeline
+name: CI Pipeline
 
 on:
-  push:
-    branches: [ "master" ]
+  push: 
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-
+    runs-on: gowtham
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-  Image:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-     - uses: actions/checkout@v4
-     - name: Set up JDK 17
-       uses: actions/setup-java@v4
-       with:        
-          java-version: '17'
+      - uses: actions/checkout@v6
+      - name: java jdk17
+        uses: actions/setup-java@v5
+        with:
+          java-version: 17
           distribution: 'temurin'
           cache: maven
-     -  name: Docker Image
-        run: docker build -t ttrimage:v1 .
-
-   
+      - name: maven build
+        run: mvn clean package --file pom.xml
+      - name: upload artifact
+        uses: actions/upload-artifact@3.0
+        with:
+          name: build-artifact
+          path: target/*.war
+  Image:
+    
+    runs-on: gowtham
+    needs: build
+    steps:
+      - uses: actions/checkout@v6
+      - name: artifact
+        uses: actions/download-artifact@v5
+      - name: Docker image
+        uses: docker/build-push-action@v6
+        with:
+          path: target/*.war
+          context: .
+          push: false
+          tags: ttrimage:v1
+          file: ./Dockerfile
