--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: maven build
         run: mvn clean package --file pom.xml
       - name: upload artifact
-        uses: actions/upload-artifact@3.0
+        uses: actions/upload-artifact@v6
         with:
           name: build-artifact
           path: target/*.war
