--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: maven build
-        run: mvn clean package --file pom.xml
+        run: mvn clean package 
       - name: upload artifact
         uses: actions/upload-artifact@v6
         with:
