--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,9 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: maven build
-        run: sudo apt install maven -y && mvn clean package
-        # run: mvn clean package 
+        run: sudo apt install maven -y 
+      - name: clean package
+        run: mvn clean package 
       - name: upload artifact
         uses: actions/upload-artifact@v6
         with:
