--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,8 @@ jobs:
       - uses: actions/checkout@v6
       - name: artifact
         uses: actions/download-artifact@v5
+      - name: docker setup
+        uses: docker/setup-buildx-action@v3.12.0
       - name: Docker image
         uses: docker/build-push-action@v6
         with:
