--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,8 @@ on:
 jobs:
   build:
 
-    #runs-on: linux
-    runs-on: ubuntu-latest
+    runs-on: linux
+    
     steps:
       - uses: actions/checkout@v6
       - name: java jdk17
@@ -31,8 +31,8 @@ jobs:
           path: target/*.war
   Image:
     
-    #runs-on: linux
-    runs-on: ubuntu-latest
+    runs-on: linux
+    
     needs: build
     steps:
       - uses: actions/checkout@v6
@@ -40,6 +40,9 @@ jobs:
         uses: actions/download-artifact@v5
       - name: docker setup
         uses: docker/setup-buildx-action@v3.12.0
+      - name: dockerfile precheck gowtham
+        run: |
+          ls -l
       - name: Docker image
         uses: docker/build-push-action@v6
         with:
