--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v6
         with:
           name: build-artifact
-          path: target/*.war
+          path: target
   Image:
     
     runs-on: linux
@@ -46,7 +46,7 @@ jobs:
       - name: Docker image
         uses: docker/build-push-action@v6
         with:
-          path: target/*.war
+          path: target
           context: .
           push: false
           tags: ttrimage:v1
