--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v6
         with:
           name: build-artifact
-          path: target
+          path: target/*.war
   Image:
     
     runs-on: linux
