--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,15 +38,16 @@ jobs:
       - uses: actions/checkout@v4
       - name: artifact
         uses: actions/download-artifact@v5
+        with:
+          path: target
       - name: docker setup
-        uses: docker/setup-buildx-action@v3.12.0
+        uses: docker/setup-buildx-action@v3
       - name: dockerfile precheck gowtham
         run: |
-          ls -l
+          ls -l target
       - name: Docker image
         uses: docker/build-push-action@v6
         with:
-          path: target
           context: .
           push: false
           tags: ttrimage:v1
