--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,7 @@ jobs:
       - name: artifact
         uses: actions/download-artifact@v5
         with:
+          name: build-artifact
           path: target
       - name: docker setup
         uses: docker/setup-buildx-action@v3
