--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,11 @@ jobs:
         with:
           name: build-artifact
           path: target
+      - name: Docker login
+        uses: docker/login-action@v3
+        with:
+          username: ${{vars.DOCUSERNAME}}
+          password: ${{secrets.DOCPASS}}
       - name: docker setup
         uses: docker/setup-buildx-action@v3
       - name: dockerfile precheck gowtham
@@ -50,6 +55,6 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: false
+          push: true
           tags: ttrimage:v1
           file: ./Dockerfile
